--- a/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/app/src/main/res/layout/list_item_sleep_night.xml
@@ -5,12 +5,15 @@
 
     <data>
 
+        <variable
+            name="sleepNight"
+            type="dev.marawanxmamdouh.sleeptracker.database.SleepNight" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/quality_image"
@@ -19,11 +22,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/quality_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/ic_sleep_5"
-            android:contentDescription="@string/quality_image" />
+            tools:srcCompat="@drawable/ic_sleep_5" />
 
         <TextView
             android:id="@+id/sleep_length"
