--- a/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/app/src/main/res/layout/list_item_sleep_night.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/quality_image"
+            android:id="@+id/qualityImage"
             android:layout_width="@dimen/icon_size"
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
@@ -29,26 +29,26 @@
             tools:srcCompat="@drawable/ic_sleep_5" />
 
         <TextView
-            android:id="@+id/sleep_length"
+            android:id="@+id/sleepLength"
             android:layout_width="0dp"
             android:layout_height="20dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/quality_image"
-            app:layout_constraintTop_toTopOf="@+id/quality_image"
+            app:layout_constraintStart_toEndOf="@+id/qualityImage"
+            app:layout_constraintTop_toTopOf="@+id/qualityImage"
             tools:text="Wednesday" />
 
         <TextView
-            android:id="@+id/quality_string"
+            android:id="@+id/qualityString"
             android:layout_width="0dp"
             android:layout_height="20dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/sleep_length"
+            app:layout_constraintEnd_toEndOf="@+id/sleepLength"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/sleep_length"
-            app:layout_constraintTop_toBottomOf="@+id/sleep_length"
+            app:layout_constraintStart_toStartOf="@+id/sleepLength"
+            app:layout_constraintTop_toBottomOf="@+id/sleepLength"
             tools:text="Excellent!!!" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
