--- a/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/app/src/main/res/layout/list_item_sleep_night.xml
@@ -26,6 +26,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:sleepImage="@{sleepNight}"
             tools:srcCompat="@drawable/ic_sleep_5" />
 
         <TextView
@@ -37,6 +38,7 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/qualityImage"
+            app:sleepDurationFormatted="@{sleepNight}"
             app:layout_constraintTop_toTopOf="@+id/qualityImage"
             tools:text="Wednesday" />
 
@@ -49,6 +51,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/sleepLength"
             app:layout_constraintTop_toBottomOf="@+id/sleepLength"
+            app:sleepQualityString="@{sleepNight}"
             tools:text="Excellent!!!" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
