Implement a Click Listener

--- a/app/src/main/res/layout/list_item_sleep_night_grid.xml
+++ b/app/src/main/res/layout/list_item_sleep_night_grid.xml
@@ -8,12 +8,17 @@
         <variable
             name="sleepNight"
             type="dev.marawanxmamdouh.sleeptracker.database.SleepNight" />
+
+        <variable
+            name="clickListener"
+            type="dev.marawanxmamdouh.sleeptracker.sleeptracker.SleepNightListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:onClick="@{() -> clickListener.onClick(sleepNight)}">
 
         <ImageView
             android:id="@+id/qualityImageGrid"
